# note_taker

./: CMakeLists.txt
src/: main.cpp
src/comps/: app.cpp  app.h  menu_loop.cpp  window_loop.cpp
